# exp-os

./: .gitignore  CMakeLists.txt  Makefile  debug.sh  run.sh
boot/: CMakeLists.txt  boot.asm
drv/: main.py
kernel/: CMakeLists.txt  error.c  error.h  idt.c  idt.h  interrupts.c  interrupts.h  isr.asm  isr.h  ke_main.c  ke_main.h  ke_mem.c  ke_mem.h  ke_types.h  linker.ld  memory.c  memory.h  print.c  print.h  typedefs.h
kernel/diag/: error.c  error.h  print.c
kernel/ints/: idt_st.asm  idt_st.h  interrupts.c  interrupts.h  isr.asm  isr.h  pic_st.asm  pic_st.h
kernel/memory/: memory.c  memory.h  paging.c  paging.h  segment.c  segment.h
kernel/modules/fs/: filesystem.c  filesystem.h
kernel/modules/keyboard/: kb.c  kb.h  kb_isr.asm
kernel/modules/serial/: com.c  com.h
kernel/modules/vga/: vga_io.c  vga_io.h  vga_text.c  vga_text.h
kernel/objects/: io_object.c  io_object.h  object.c  object.h  pool.c  pool.h
kernel/string/: string.c  string.h
kernel/user/: elf_loader.c  elf_loader.h  exec.c  exec.h  syscall.c  syscall.h  syscall_isr.asm  usermode.asm
kernel/user/elf/: elf_loader.c  elf_loader.h
loader/: CMakeLists.txt  main.asm
modules/vga/: vga_io.c  vga_io.h
shell/: CMakeLists.txt  linker.ld  main.asm  main.c  proc.asm
util/: com.asm  disk_io.asm  elf_def.asm  elf_ldr.asm  idt_proc.asm  idt_proc.h  mempaging.asm  seg.asm  string.asm  v_io.asm  v_io.h
